# social-tone-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: .gitignore  config
data/dummy/: dummy_input.npz.dvc
data/raw/: multimodal_img_noft_pca.csv.dvc  multimodal_txt_noft_pca.csv.dvc  multimodal_y_noft.csv.dvc
models/triton_repo/multimodal_classifier/: config.pbtxt
outputs/2026-02-13/06-25-02/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-13/06-28-45/.hydra/: hydra.yaml
outputs/2026-02-13/06-29-27/.hydra/: hydra.yaml
outputs/2026-02-13/06-32-16/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-13/06-36-33/.hydra/: hydra.yaml
outputs/2026-02-13/06-49-03/.hydra/: hydra.yaml
outputs/2026-02-13/07-19-06/.hydra/: hydra.yaml
scripts/: convert_to_trt.sh  direct_onnx.py  export_onnx.py  prepare_dummy_data.py  triton_client.py
social_tone/: commands.py
social_tone/configs/: config.yaml
social_tone/configs/data/: default.yaml
social_tone/configs/logging/: default.yaml
social_tone/configs/model/: default.yaml
social_tone/configs/training/: default.yaml
social_tone/data/: datamodule.py  downloader.py
social_tone/models/: classifier.py
